Updated Alacritty config

--- a/.alacritty.yml
+++ b/.alacritty.yml
@@ -7,7 +7,7 @@ window:
 # Font
 font:
   normal:
-    family: DejaVuSansMono Nerd Font
+    family: DejaVuSansM Nerd Font Mono
 
     style: Book 
 
