--- a/zed/settings.json
+++ b/zed/settings.json
@@ -12,23 +12,28 @@
 		"inline_completion_provider": "none",
 		"copilot": false
 	},
+	"assistant": {
+		"version": "1",
+		"button": false,
+		"enabled": false
+	},
 	"outline_panel": {
-		"dock": "right",
+		"dock": "left",
 		"button": false
 	},
 	"chat_panel": {
-		"dock": "right",
+		"dock": "left",
 		"button": false
 	},
 	"collaboration_panel": {
 		"button": false,
-		"dock": "right"
+		"dock": "left"
 	},
 	"vim_mode": true,
 	"ui_font_size": 12,
 	"buffer_font_size": 12,
 	"project_panel": {
-		"dock": "right"
+		"dock": "left"
 	},
 	"terminal": {
 		"dock": "bottom"
