Updated the Zed settings

--- a/zed/settings.json
+++ b/zed/settings.json
@@ -14,7 +14,11 @@
 		"copilot": false
 	},
 	"assistant": {
-		"version": "2",
+		"default_model": {
+   "provider": "zed.dev",
+   "model": "claude-3-5-sonnet-20240620"
+  },
+  "version": "2",
 		"button": false,
 		"enabled": false
 	},
@@ -31,8 +35,8 @@
 		"dock": "left"
 	},
 	"vim_mode": true,
-	"ui_font_size": 12,
-	"buffer_font_size": 12,
+	"ui_font_size": 14,
+	"buffer_font_size": 14,
 	"project_panel": {
 		"dock": "left"
 	},
@@ -44,6 +48,6 @@
 	"theme": {
 		"mode": "system",
 		"light": "Gruvbox Light",
-		"dark": "Gruvbox Dark"
+		"dark": "Ayu Dark"
 	}
 }
